--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,7 @@ language: it
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: "I Barbarò vol. II\r\nLe lagrime del prossimo"
 url: http://www.gutenberg.org/ebooks/46749
